--- a/basic.html
+++ b/basic.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>INTRO</title>
+    <meta charset="UTF-8">
+    <title>Vaibhav Portfolio</title>
 </head>
 
 <body>
