--- a/program.html
+++ b/program.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vaibhav K Madhyastha - LEGEND</title>
+    <title>Vaibhav K Madhyastha - THE LEGEND</title>
     <style>
         * {
             margin: 0;
